Fiish user redaction + admins

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  padding-top: 120px;
+  padding-top: 160px;
 }
 
 section {
@@ -175,5 +175,20 @@ input {
   @extend .has-error;
   .form-control {
     color: $state-danger-text;
+  }
+}
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid #999;
+    &:last-child {
+      border-bottom: 1px solid #999;
+    }
   }
 }
